<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileBankingCXB</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yuyuequkuan">&#160;预&#160;约&#160;取&#160;款</string>
    <string name="yaoyiyaoqukuan">摇一摇取款</string>
    <string name="saoyisaoqukuan">扫一扫取款</string>
    <string name="Enter">确认</string>
    <string name="Test">测试</string>
    <string name="ip">192.167.11.88</string>
    <string name="port">5002</string>
    <string name="qrImage">二维码图像显示和摄像头扫描区</string>
    <string name="shoujiNFC">手机NFC</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_select_page">SelectPage</string>
    <string name="title_activity_sbo">SBo</string>
    <string name="title_activity_listen_qk">ListenQK</string>
	<string name="title_activity_settingpage">Sttingpage</string>
</resources>
