<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mainback"
    tools:context=".CaptureActivity" >
    <Button
        android:id="@+id/shake"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/yaoyiyaoqukuan" />
    <Button
        android:id="@+id/reservation"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shake"
        android:layout_below="@+id/shake"
        android:text="@string/yuyuequkuan" />

    <ListView
        android:id="@+id/valueView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qr_image"
        android:layout_below="@+id/valueViewTip"
        android:layout_toRightOf="@+id/shake" >

    </ListView>


    <Button
       	android:id="@+id/phonenfc"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sweep"
        android:layout_below="@+id/sweep"
        android:visibility="invisible"
        android:text="@string/shoujiNFC" />
    
    <Button
        android:id="@+id/sweep"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reservation"
        android:layout_below="@+id/reservation"
        android:text="@string/saoyisaoqukuan" />

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="fill_parent"
        android:layout_height="165dp"
        android:visibility="invisible"
        android:layout_below="@+id/valueViewTip"
        android:layout_alignLeft="@+id/ipEditText" />

    <com.cxb.mobilebanking.view.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="165dp"
        android:layout_below="@+id/valueViewTip"
        android:layout_alignLeft="@+id/ipEditText"
        android:configChanges="orientation|keyboardHidden" 
        android:screenOrientation="portrait"
        android:background="@android:color/transparent" />
<!--     -->

    <ImageView
        android:id="@+id/qr_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_above="@+id/replaysound"
        android:layout_alignLeft="@+id/ipEditText"
        android:layout_alignRight="@+id/ipEditText"
        android:layout_below="@+id/valueViewTip" />

    <Button
        android:id="@+id/enter"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ipEditText"
        android:layout_alignBottom="@+id/ipEditText"
        android:layout_alignLeft="@+id/sweep"
        android:layout_alignRight="@+id/reservation"
        android:visibility="invisible"
        android:text="@string/Enter" />

    <EditText
        android:id="@+id/ipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:layout_toRightOf="@+id/enter"
        android:ems="10"
        android:visibility="invisible"
        android:hint="@string/ip"
        android:text="@string/ip" />

    <TextView
        android:id="@+id/valueViewTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/phonenfc"
        android:textColor="@color/result_text" 
        android:layout_alignRight="@+id/valueView"
        android:layout_toRightOf="@+id/reservation" />

    <Button
        android:id="@+id/replaysound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enter"
        android:layout_alignLeft="@+id/valueView"
        android:layout_alignRight="@+id/qr_image"
        android:visibility="invisible"
        />
   
    <ImageView
        android:id="@+id/qr_image_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/result_text" />
<!-- -->


</RelativeLayout>
